--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MAX重量トラッカー</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <link rel="stylesheet" href="style.css">
-</head>
 <body>
+  <div id="warningMessage" style="background:linear-gradient(90deg,#6a82fb 0%,#a1c4fd 100%);color:#fff;padding:14px 10px;text-align:center;font-weight:600;letter-spacing:1px;">
+    このアプリを絶対に消したりリセットしないでください。記録が消えてしまいます。
+  </div>
   <div style="margin-top: 20px; text-align: right;">
     <button id="historyBtn" style="padding:8px 18px;border-radius:8px;background:#6a82fb;color:#fff;border:none;font-weight:600;box-shadow:0 2px 8px #a1c4fd88;cursor:pointer;">履歴</button>
   </div>
@@ -36,4 +29,3 @@
 
   <script src="script.js"></script>
 </body>
-</html>
