--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MAX重量トラッカー</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
   <div id="warningMessage" style="background:linear-gradient(90deg,#6a82fb 0%,#a1c4fd 100%);color:#fff;padding:14px 10px;text-align:center;font-weight:600;letter-spacing:1px;">
     このアプリを絶対に消したりリセットしないでください。記録が消えてしまいます。
@@ -29,3 +39,4 @@
 
   <script src="script.js"></script>
 </body>
+</html>
